--- a/upkg/src/upkg.ui
+++ b/upkg/src/upkg.ui
@@ -2,23 +2,137 @@
 <ui version="4.0">
  <class>upkgClass</class>
  <widget class="QMainWindow" name="upkgClass">
-  <property name="windowModality">
-   <enum>Qt::ApplicationModal</enum>
-  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>715</width>
-    <height>375</height>
+    <width>586</width>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>upkg</string>
+   <string>更新打包器</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
-  <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_9">
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_4">
+        <item>
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>打包文件目录：</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_7">
+          <item>
+           <widget class="QLineEdit" name="inputDirEdit"/>
+          </item>
+          <item>
+           <widget class="QToolButton" name="InputDirBtn">
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>打包输出目录：</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_8">
+          <item>
+           <widget class="QLineEdit" name="OutputDirEdit"/>
+          </item>
+          <item>
+           <widget class="QToolButton" name="OutputDirBtn">
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_11">
+          <item>
+           <widget class="QLabel" name="label_7">
+            <property name="text">
+             <string>URL位置：</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="UrlEdit"/>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_8">
+            <property name="text">
+             <string>XML文件名：</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLineEdit" name="XmlEdit"/>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout_5">
+        <item>
+         <widget class="QPushButton" name="startBtn">
+          <property name="text">
+           <string>开始生成</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="clsBtn">
+          <property name="text">
+           <string>清除列表</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="refreshBtn">
+          <property name="text">
+           <string>刷新列表</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </item>
+    <item row="1" column="0">
+     <widget class="QTableView" name="fileListView"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <tabstops>
+  <tabstop>inputDirEdit</tabstop>
+  <tabstop>InputDirBtn</tabstop>
+  <tabstop>OutputDirEdit</tabstop>
+  <tabstop>OutputDirBtn</tabstop>
+  <tabstop>UrlEdit</tabstop>
+  <tabstop>XmlEdit</tabstop>
+  <tabstop>fileListView</tabstop>
+  <tabstop>startBtn</tabstop>
+  <tabstop>clsBtn</tabstop>
+  <tabstop>refreshBtn</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
