更新程序图标

--- a/upkg/src/res.qrc
+++ b/upkg/src/res.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>upkg.ico</file>
+        <file alias="upkg.ico">upkg.png</file>
     </qresource>
 </RCC>
